force-app/main/default/objects/Monster__c/Monster__c.object-meta.xml
<CustomObject>
    <label>Monster</label>
    <nameField>
        <label>Monster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monsters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>