force-app/main/default/objects/Monster__c/fields/MaxExperiencePoints__c.field-meta.xml
<CustomField>
    <fullName>MaxExperiencePoints__c</fullName>
    <label>Max Experience Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>