force-app/main/default/objects/Monster__c/fields/MaxHitPoints__c.field-meta.xml
<CustomField>
    <fullName>MaxHitPoints__c</fullName>
    <label>Max Hit Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>