force-app/main/default/objects/Monster__c/fields/MinExperiencePoints__c.field-meta.xml
<CustomField>
    <fullName>MinExperiencePoints__c</fullName>
    <label>Min Experience Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>