force-app/main/default/objects/Monster__c/fields/MinHitPoints__c.field-meta.xml
<CustomField>
    <fullName>MinHitPoints__c</fullName>
    <label>Min Hit Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>